# ai-real-estate-agent

./: .gitignore  README.md  REQUEST_FLOW.md  SETUP.md  package-lock.json  package.json  turbo.json
apps/web/: next.config.js  package.json
apps/web/src/app/: page.tsx
apps/web/src/app/api/offer/[offerId]/: route.ts
apps/web/src/app/api/offer/create/: route.ts
apps/web/src/app/api/payment/create-checkout/: route.ts
apps/web/src/app/offer/create/: page.tsx
apps/web/src/app/property/: page.tsx
apps/web/src/components/: FaqSection.tsx
apps/web/src/lib/: auth.ts  contract-template.ts  email.ts  pdf-generator.ts  property-extractor.ts
apps/web/templates/: README.md
backend/: .env.example  README.md  pyproject.toml  real_estate.db  requirements.txt
backend/ai_real_estate_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  offer.py  payment.py  property.py  webhooks.py
backend/app/models/: __init__.py  offer.py  payment.py  property.py  subscription.py  user.py
backend/app/schemas/: __init__.py  offer.py  payment.py  property.py  user.py
backend/app/utils/: __init__.py  email.py  pdf_generator.py  property_extractor.py
backend/tests/: __init__.py  conftest.py  test_api.py
frontend/: .env.example  README.md  next.config.js  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/offer/[offerId]/download/: page.tsx
frontend/src/app/payment/success/: page.tsx
frontend/src/components/: FaqSection.tsx
(+6 files in other folders)
